--- a/spectre_protocol/Anchor.toml
+++ b/spectre_protocol/Anchor.toml
@@ -4,8 +4,12 @@ package_manager = "yarn"
 [features]
 resolution = true
 skip-lint = false
+seeds = false
 
 [programs.localnet]
+spectre_protocol = "B2at4oGQFPAbuH2wMMpBsFrTvJi71GUvR7jyxny7HaGf"
+
+[programs.devnet]
 spectre_protocol = "B2at4oGQFPAbuH2wMMpBsFrTvJi71GUvR7jyxny7HaGf"
 
 [registry]
@@ -17,3 +21,5 @@ wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/**/*.ts\""
+# To test with TEE devnet (MagicBlock), use:
+# anchor test --provider.cluster https://tee.magicblock.app/
