--- a/spectre_protocol/Anchor.toml
+++ b/spectre_protocol/Anchor.toml
@@ -21,5 +21,16 @@ wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 \"tests/**/*.ts\""
-# To test with TEE devnet (MagicBlock), use:
-# anchor test --provider.cluster https://tee.magicblock.app/
+
+# TEE Testing Commands:
+# ------------------------------------------------------------------------------
+# To test with MagicBlock TEE devnet:
+#   anchor test --provider.cluster https://devnet.magicblock.app
+#
+# To deploy to TEE devnet:
+#   anchor deploy --provider.cluster https://devnet.magicblock.app
+#
+# TEE RPC Endpoints:
+# - Devnet: https://devnet.magicblock.app
+# - The TEE endpoint provides private execution with encrypted state
+# ------------------------------------------------------------------------------
