--- a/spectre_protocol/app/package.json
+++ b/spectre_protocol/app/package.json
@@ -25,13 +25,16 @@
     "@tanstack/react-query": "^5.62.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
     "sonner": "^1.7.1",
+    "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
+    "vite-plugin-node-polyfills": "^0.25.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
