--- a/spectre_protocol/app/package.json
+++ b/spectre_protocol/app/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
+    "snarkjs": "^0.7.6",
     "sonner": "^1.7.1",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
