--- a/spectre_protocol/app/package.json
+++ b/spectre_protocol/app/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@ethersproject/keccak256": "^5.8.0",
+    "@lightprotocol/hasher.rs": "^0.2.1",
+    "@vercel/node": "^5.0.0",
+    "bn.js": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-select": "^2.1.4",
@@ -42,6 +45,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.5",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
