--- a/spectre_protocol/app/package.json
+++ b/spectre_protocol/app/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
     "@ethersproject/keccak256": "^5.8.0",
+    "@ethersproject/sha2": "^5.8.0",
     "@lightprotocol/hasher.rs": "^0.2.1",
-    "@vercel/node": "^5.0.0",
-    "bn.js": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-select": "^2.1.4",
@@ -27,6 +26,9 @@
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.98.0",
     "@tanstack/react-query": "^5.62.16",
+    "@vercel/node": "^5.0.0",
+    "bn.js": "^5.2.1",
+    "borsh": "^2.0.0",
     "circomlibjs": "^0.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
